Fix full aligned block container width

--- a/css/sass-partials/_wordpress.scss
+++ b/css/sass-partials/_wordpress.scss
@@ -12,10 +12,10 @@ a img.aligncenter {
 	margin-left:auto;
 	margin-right:auto;
 }
-.entry-content .alignfull > [class*='wp-block-'] {
-	max-width: 768px;
-    margin: 0 auto;
-}
+// .entry-content .alignfull > [class*='wp-block-'] {
+// 	max-width: 768px;
+//     margin: 0 auto;
+// }
 .entry-content .wp-block-image.alignfull img,
 .entry-content .wp-block-image.alignwide img {
     width: 100%;
